--- a/EntityFramwork/EntityFramwork.csproj
+++ b/EntityFramwork/EntityFramwork.csproj
@@ -28,6 +28,10 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Home\Controllers\" />
+    <Folder Include="Areas\Home\Data\" />
+    <Folder Include="Areas\Home\Models\" />
+    <Folder Include="Areas\Home\Views\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
