Enhance product management and identity features
Updated ProductController for better file handling and added Detail view for products. Improved identity management pages and navigation structure. Updated appsettings for new database connection and added CSS enhancements. Organized project structure with new folders for identity-related data and models.

--- a/EntityFramwork/appsettings.json
+++ b/EntityFramwork/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "dbcs": "Server=DESKTOP-A8ERDH2;Database=mydb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "dbcs": "Server=DESKTOP-A8ERDH2;Database=mydb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EntityFramwork;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
