--- a/EntityFramwork/EntityFramwork.csproj
+++ b/EntityFramwork/EntityFramwork.csproj
@@ -32,6 +32,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Home\Data\" />
     <Folder Include="Areas\Home\Models\" />
+    <Folder Include="Areas\Identity\Data\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
