Add shopping cart functionality and related services
- Introduced `DbSet<CartItem>` in `ApplicationDbContext` for cart management.
- Created migration `addCartItemsToDb` for `CartItems` table and identity tables.
- Implemented `CartService` for cart operations and total calculation.
- Developed `CartController` to manage cart-related HTTP requests.
- Added `Index.cshtml` view for displaying cart items with remove and clear options.
- Updated project files and namespaces for proper integration.
- Enhanced product display with "Add to Cart" functionality.
- Created `_CartSummary.cshtml` for displaying cart summary in layout.
- Made various updates to improve styling and functionality across views.

--- a/EntityFramwork/EntityFramwork.csproj
+++ b/EntityFramwork/EntityFramwork.csproj
@@ -25,15 +25,18 @@
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Customer\Data\" />
+    <Folder Include="Areas\Customer\Models\" />
+    <Folder Include="Areas\Home\Controllers\" />
     <Folder Include="Areas\Home\Data\" />
     <Folder Include="Areas\Home\Models\" />
     <Folder Include="Areas\Identity\Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
