Add authentication features and restructure project
- Updated solution to include a new "web" project.
- Added area attributes to Category, Product, and Student controllers.
- Expanded AuthController with login functionality and views.
- Created LoginViewModel and TokenResponse classes for authentication.
- Implemented JWT handling in AuthService and JwtHelper.
- Modified layout and routing configurations for areas.
- Removed unused Class1.cs file.

--- a/EntityFramwork/web.csproj
+++ b/EntityFramwork/web.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,11 +32,10 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Auth\Data\" />
+    <Folder Include="Areas\Auth\Models\" />
     <Folder Include="Areas\Customer\Data\" />
     <Folder Include="Areas\Customer\Models\" />
-    <Folder Include="Areas\Home\Controllers\" />
-    <Folder Include="Areas\Home\Data\" />
-    <Folder Include="Areas\Home\Models\" />
     <Folder Include="Areas\Identity\Data\" />
   </ItemGroup>
 
