Add Customer area and enhance UI for product views
Updated HomeController to include Customer area with routing changes. Enhanced Detail and Index views with Bootstrap for improved styling and user experience. Modified project structure to include Controllers folder.

--- a/EntityFramwork/web.csproj
+++ b/EntityFramwork/web.csproj
@@ -35,6 +35,7 @@
     <Folder Include="Areas\Customer\Data\" />
     <Folder Include="Areas\Customer\Models\" />
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
